[package]
name = "quantum-vault"
version = "0.1.0"
description = "Quantum Vault - Post-quantum resistant Solana vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quantum_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "=1.18.17"
borsh = "0.10.3"

